--- a/package.json
+++ b/package.json
@@ -25,7 +25,18 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "body-parser": "~1.14.2",
+    "connect": "~3.4.1",
+    "connect-multiparty": "~2.0.0",
+    "express-session": "~1.13.0",
+    "formidable": "~1.0.17",
+    "imagemagick": "~0.1.3",
+    "mysql": "~2.10.2",
+    "node-static": "~0.7.7",
+    "session": "~0.1.0",
+    "nodemailer" : "~2.3.0",
+    "nodemailer-smtp-transport" : "~2.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
