--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "nodemailer" : "~2.3.0",
     "nodemailer-smtp-transport" : "~2.4.1",
     "https" : "~1.0.0 ",
-    "sequelize" : "~3.24.6"
+    "sequelize" : "~3.24.6",
+    "qrcode-npm": "~0.0.3"
   },
   "devDependencies": {},
   "bundleDependencies": [],
