--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "qrcode-npm": "~0.0.3",
     "html5-to-pdf" : "~2.1.1",
     "phantom-html2pdf" : "4.0.0",
-    "mailgun-js": "~0.7.12"
+    "mailgun-js": "~0.7.12",
+    "gmail-send": "~1.2.10"
   },
   "devDependencies": {},
   "bundleDependencies": [],
