--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "mailgun-js": "~0.7.12",
     "node-mailjet": "3.1.0",
     "image-size": "0.6.0",
-    "jimp": "0.2.28"
+    "jimp": "0.2.28",
+    "jszip": "3.1.5"
   },
   "devDependencies": {},
   "bundleDependencies": [],
